# KORG-Tools

./: CMakeLists.txt  LICENSE  README.md
include/libkorg/: BankFormat.hpp  BankFormatReader.hpp  BankObject.hpp  CMakeLists.txt  ChunkFormat.hpp  EncryptedSample.hpp  FormatException.hpp  FullStyle.hpp  KorgFormatReader.hpp  KorgFormatWriter.hpp  Model.hpp  MultiSample.hpp  Numbers.hpp  ObjectBank.hpp  Package.hpp  Pad.hpp  Performance.hpp  Pitch.hpp  ProgramChangeSequence.hpp  Sample.hpp  Set.hpp  SingleTouchSettings.hpp  SongBook.hpp  SongBookEntry.hpp  Sound.hpp  SoundBankNumber.hpp  Style.hpp  StyleBank.hpp  StyleBankFormat.hpp  Text.hpp  UnknownChunk.hpp
include/libkorg/BankFormat/: BankCollection.hpp  BankFormat.hpp  BankNumber.hpp  BankObject.hpp  BankSlot.hpp  CMakeLists.txt  EncryptedSample.hpp  MultiSamplesObject.hpp  ObjectBank.hpp  Pad.hpp  PadBankNumber.hpp  Performance.hpp  PerformanceBankNumber.hpp  PerformanceObject.hpp  Reader.hpp  SampleBankNumber.hpp  SampleObject.hpp  SingleTouchSettings.hpp  SongBook.hpp  SongBookEntry.hpp  SoundBankNumber.hpp  SoundObject.hpp  Style.hpp  StyleBankNumber.hpp  Writer.hpp
include/libkorg/ChunkFormat/: CMakeLists.txt  ChunkFormat.hpp  ChunkReader.hpp  ChunkWriter.hpp
include/libkorg/Converters/: CMakeLists.txt  IdsCorrector.hpp  PerformanceConverter.hpp  PerformanceV0ToV1Converter.hpp  PerformanceV2ToV1Converter.hpp  SampleRemover.hpp  SoundMapper.hpp  StandardMIDIFormatConverter.hpp
include/libkorg/DataViews/: CMakeLists.txt  DrumKitView.hpp  MultiSamplesIndex.hpp  RangedEventView.hpp  SetIndex.hpp  StyleView.hpp
include/libkorg/MultiSamples/: CMakeLists.txt  MultiSamplesData.hpp
include/libkorg/Performance/: AccompanimentSettings.hpp  CMakeLists.txt  FX.hpp  GeneralData.hpp  GeneralPerformanceSettings.hpp  KeyboardSettings.hpp  Numbers.hpp  TrackProperties.hpp
include/libkorg/Sample/: CMakeLists.txt  Compression.hpp  SampleData.hpp
include/libkorg/Sound/: CMakeLists.txt  DrumKit.hpp  EqualizerData.hpp  KeyRange.hpp  OscillatorData.hpp  SoundData.hpp
include/libkorg/Style/: CMakeLists.txt  ChordVariation.hpp  KORG_MIDI.hpp  StyleData.hpp  StyleElementData.hpp  StyleElementInfoData.hpp  StyleElementNumber.hpp  StyleInfoData.hpp  StyleTrackData.hpp
src/: BankFormatReader.cpp  CMakeLists.txt  KorgFormatReader.cpp  KorgFormatTOCReader.cpp  KorgFormatTOCReader.hpp  KorgFormatWriter.cpp  MultiSample.cpp  OC31Decompressor.cpp  OC31Decompressor.hpp  Package.cpp  Pad.cpp  Performance.cpp  PerformanceObject.cpp  Pitch.cpp  Sample.cpp  Set.cpp  SongBook.cpp  SongBookEntry.cpp  Sound.cpp  Style.cpp  Text.cpp
src/BankFormat/: BankFormat.hpp  CMakeLists.txt  OC31.cpp  OC31.hpp  OC31Compressor.cpp  OC31Compressor.hpp  OC31Decompressor.cpp  OC31Decompressor.hpp  ObjectBank.cpp  ObjectBankWriter.cpp  ObjectBankWriter.hpp  Reader.cpp  Reader.hpp  StyleBankNumber.cpp  TOCEntryChecksumFunction.hpp  TOCReader.cpp  TOCReader.hpp  Writer.cpp  Writer.hpp
src/Converters/: CMakeLists.txt  IdsCorrector.cpp  SampleRemover.cpp  StandardMIDIFormatConverter.cpp
src/DataViews/: CMakeLists.txt  ChordVariationView.hpp  EmptyTrackView.hpp  MultiSamplesIndex.cpp  SetIndex.cpp  StyleElementView.hpp  StyleView.cpp  TrackView.hpp
src/Models/: CMakeLists.txt  ModelsManager.cpp  ModelsManager.hpp  pa4x.hpp  pa600.hpp  pa600qt.hpp  pa700.hpp
src/MultiSamplesFormat/: CMakeLists.txt  MultiSamplesFormatWriter.hpp  MultiSamplesReader.hpp  MultiSamplesWriterFactory.hpp
src/MultiSamplesFormat/Format1.0/: MultiSamplesFormat1_0Reader.cpp  MultiSamplesFormat1_0Reader.hpp
src/MultiSamplesFormat/Format3.0/: MultiSamplesFormat3_0Reader.cpp  MultiSamplesFormat3_0Reader.hpp  MultiSamplesFormat3_0Writer.cpp  MultiSamplesFormat3_0Writer.hpp
src/MultiSamplesFormat/Format5.0/: MultiSamplesFormat5_0Reader.cpp  MultiSamplesFormat5_0Reader.hpp
src/PCMFormat/: CMakeLists.txt  Compression.cpp  PCMFormatWriter.hpp  PCMReader.hpp  PCMWriterFactory.hpp
src/PCMFormat/Format0.0/: PCMFormat0_0Reader.cpp  PCMFormat0_0Reader.hpp  PCMFormat0_0Writer.cpp  (+1 more)
src/Package/: CMakeLists.txt  FileSystem.hpp  PackageInternals.hpp  ZLibBlocksInputStream.cpp  ZLibBlocksInputStream.hpp
src/PerformanceFormat/: CMakeLists.txt  InsertFXReader.hpp  MasterFXReader.hpp  PadSettingsReader.hpp  PerformanceFormatReader.cpp  PerformanceFormatReader.hpp  PerformanceFormatWriter.hpp  PerformanceReader.hpp  PerformanceReaderZeroChunkReader.hpp  PerformanceWriterFactory.hpp  TrackPropertiesReader.cpp  TrackPropertiesReader.hpp
src/Reading/: AccompanimentSettingsReader.cpp  AccompanimentSettingsReader.hpp  CMakeLists.txt  ChunkReader.cpp  ChunkReader.hpp  KeyboardSettingsReader.cpp  KeyboardSettingsReader.hpp  PerformanceDataFormat.hpp  PerformanceReader.cpp  PerformanceReader.hpp  SkippingChunkReader.hpp  StyleReader.cpp  StyleReader.hpp  TrackPropertiesReader.cpp  TrackPropertiesReader.hpp
src/SoundFormat/: CMakeLists.txt  SoundFormatWriter.hpp  SoundReader.hpp  SoundWriterFactory.hpp
src/StyleFormat/: CMakeLists.txt  StyleFormatReader.hpp  StyleFormatWriter.hpp  StyleReader.hpp  StyleWriterFactory.hpp
src/Writer/: CMakeLists.txt  ChunkWriter.hpp  PerformanceWriter.cpp  PerformanceWriter.hpp  StyleWriter.cpp  StyleWriter.hpp
tests/: CMakeLists.txt  Shared.hpp
tests/no-data/: CompressionTests.cpp
tests/oc31/: OverlappingReferences.cpp  past_end.cpp
tests/styles/: EventComparison.hpp
tools/setexplorer/: CMakeLists.txt  SetController.hpp
tools/setinfo/: CMakeLists.txt  FormattedOutputter.hpp  HumanReadableOutputter.hpp  MultiSamplesOutputter.cpp  MultiSamplesOutputter.hpp  PerformanceOutputter.cpp  PerformanceOutputter.hpp  PerformanceV0Outputter.cpp  PerformanceV0Outputter.hpp  PerformanceV1Outputter.cpp  PerformanceV1Outputter.hpp  PerformanceV2Outputter.cpp  PerformanceV2Outputter.hpp  SampleOutputter.cpp  SampleOutputter.hpp  SoundOutputter.cpp  SoundOutputter.hpp  StyleOutputter.cpp  StyleOutputter.hpp  XMLOutputter.hpp  main.cpp
tools/setmanager/: BankCollectionView.hpp  BankObjectsView.hpp  CMakeLists.txt  SetController.hpp  SetWindow.cpp  SetWindow.hpp  main.cpp
(+364 files in other folders)
