add_subdirectory(Reading)

set(SOURCE_FILES
	${SOURCE_FILES}

	${CMAKE_CURRENT_SOURCE_DIR}/BankFormatReader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/KorgFormatTOCReader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/KorgFormatTOCReader.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/KorgFormatWriter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/MultiSample.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/OC31Decompressor.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/OC31Decompressor.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/Pad.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Performance.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Sample.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Set.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SongBook.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SongBookEntry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Sound.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Style.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp

	PARENT_SCOPE)