add_executable(tests styles/pa600/empty.cpp styles/pa600/var1cv1_filledwithsinglenoteforeachtrack.cpp styles/pa600/var2cv1_and_var3cv1_havesingledrumnote.cpp styles/pa600/var2cv1_and_var3cv1_and_var4cv1_havesingledrumnote.cpp styles/pa600/singledrumnoteforeachstyleelement.cpp styles/EventComparison.hpp styles/pa600/fill1_and_fill4_havesamebasstrack_and_fill3_hasdifferentbasstrack.cpp styles/pa600/intro1_and_intro3_have_sameacc3track_and_intro2_hasdifferentacc3track.cpp styles/pa600/var1cv1_and_var2cv2_filledwithsinglenoteforeachtrack.cpp styles/pa600/var1cv1_filledwithsinglenoteforeachtrackandtempochangeformaster.cpp styles/pa600/chordtable1.cpp styles/pa600/chordtable2.cpp)
target_include_directories(tests PRIVATE "../include")
target_link_libraries(tests Std++ Std++Static Std++Test libkorg)